# flipperzero-firmware-wPlugins

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ANDALUCIA_INTEGRATION.md  APPSTORE.md  AS7331.cpp  AS7331.hpp  ATMlib.cpp  Application.c  Arduboy3D.ino  ArduboyFX.cpp  Arduino.h  BUILD_GUIDE.md  BzzBzz.c  CHANGELOG.MD  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  ChangeLog.md  DESCRIPTION.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  Draw.cpp  Enemy.cpp  F0App.c  FixedMath.h  GAMES_ONLY.md  GBT 13497-1992.json  GITHUB_BUILD_AUTOMATION.md  GPIO_UPDATE_GUIDE.md  Game Controller examplerc.fap  Game.cpp  HHB_IR_main  HHB_IR_main.c  (+531 more)
.catalog/: CHANGELOG.md  README.md  changelog.md  readme.md
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
401DigiLabApp/: .gitignore  401DigiLab_config.c  401DigiLab_config.h  401DigiLab_main.c  401DigiLab_main_menu.c  401DigiLab_probe.c  401DigiLab_splash.c  401DigiLab_splash.h  401_gui.h  401_sign.h  DESCRIPTION.md  README.md  app_params.h  application.fam  board.c  board.h  devicehelpers.h
401lightMessengerApp/: .gitignore  401LightMsg_acc.c  401LightMsg_acc.h  401LightMsg_bmp_editor.c  401LightMsg_bmp_editor.h  401LightMsg_config.c  401LightMsg_config.h  401LightMsg_main.c  401LightMsg_main.h  401LightMsg_main_menu.c  401LightMsg_main_menu.h  401LightMsg_set_text.c  401LightMsg_set_text.h  401LightMsg_splash.c  401LightMsg_splash.h  401_config.c  401_config.h  401_err.h  401_sign.c  (+11 more)
(+4260 files in other folders)
